Updates to the default display of panels to ensure text is always readable

--- a/code/web/interface/themes/responsive/css/main.css
+++ b/code/web/interface/themes/responsive/css/main.css
@@ -9473,11 +9473,11 @@ a.browse-thumbnail-sorted.active {
   color: #333333;
 }
 #account-link-accordion .panel.active .panel-title,
-account-settings-accordion .panel.active .panel-title {
+#account-settings-accordion .panel.active .panel-title {
   color: white;
 }
 #account-link-accordion .panel.active .panel-title > a,
-account-settings-accordion .panel.active .panel-title > a {
+#account-settings-accordion .panel.active .panel-title > a {
   color: white;
 }
 #account-settings-accordion .panel-body {
